[package]
authors = ["Shell asypost@gmail.com"]
edition = "2021"
name = "flv-live-server"
version = "0.1.0"

[workspace]
members = [
  "flv-parser",
  "flv-remuxer",
]

[features]
jemalloc = ["jemallocator"]

[[bin]]
name = "ws-flv-server"
path = "bin/ws-flv-server.rs"

[[bin]]
name = "http-flv-server"
path = "bin/http-flv-server.rs"

[dependencies]
bytes = "1.0"
clap = "3.1"
flv-remuxer = {path = "flv-remuxer"}
futures = "0.3"
futures-util = "0.3"
hyper = {version = "0.14", features = ["full"]}
jemallocator = {version = "0.3", optional = true}
mimalloc = { version = "0.1", default-features = false, optional = true }
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
simple_logger = "2.1"
tokio = {version = "1.18", features = ["full"]}
tokio-tungstenite = "0.17"
url = "2.0"

[profile.release]
codegen-units = 1
lto = true
