[package]
authors = ["Shell asypost@gmail.com"]
edition = "2021"
name = "flv-remuxer"
version = "0.1.0"

[dependencies]
flv-parser = {path = "../flv-parser"}
futures-util = "0.3"
log = "0.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1.21", features = ["full"]}
url = "2.3"
